--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>doroppu</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Aplicação web utilizando API Dribbble">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
